--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: UbuntuMono;
+    font-family: Ubuntu-Bold;
     src: url(Ubuntu-Bold.ttf);
 }
 
 * {
-	font-family: UbuntuMono;
+	font-family: Ubuntu-Bold;
     table-align: center;
 	text-align: center;
 }
